--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,4 +1,4 @@
-PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUSING_R -I./ -I./LASRcore/ -I./LASRstages/ -I./LASRapi/ -I./LASRreaders/ -I./vendor/ -I./vendor/LASlib/ -I./vendor/LASzip/
+PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUSING_R -DUSING_GDAL -I./ -I./LASRcore/ -I./LASRstages/ -I./LASRapi/ -I./LASRreaders/ -I./vendor/ -I./vendor/LASlib/ -I./vendor/LASzip/
 PKG_CXXFLAGS = $(SHLIB_OPENMP_CXXFLAGS)
 PKG_LIBS=@PKG_LIBS@ $(SHLIB_OPENMP_CXXFLAGS)
 CXX_STD=CXX17
