--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(reader_las_rectangles)
 export(reader_rectangles)
 export(region_growing)
 export(remove_attribute)
+export(remove_attributes)
 export(sampling_pixel)
 export(sampling_poisson)
 export(sampling_voxel)
