--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(has_omp_support)
 export(hulls)
 export(info)
 export(install_cmd_tools)
+export(keep_attributes)
 export(keep_class)
 export(keep_first)
 export(keep_ground)
