--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(summarise)
 export(tempgpkg)
 export(templas)
 export(templaz)
+export(temppcd)
 export(tempshp)
 export(temptif)
 export(transform_with)
