--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(reader_rectangles)
 export(region_growing)
 export(remove_attribute)
 export(remove_attributes)
+export(remove_rgb)
 export(sampling_pixel)
 export(sampling_poisson)
 export(sampling_voxel)
