--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(add_rgb)
 export(callback)
 export(chm)
 export(classify_with_csf)
+export(classify_with_ipf)
 export(classify_with_ivf)
 export(classify_with_sor)
 export(concurrent_files)
